# matrix-gitlab-bot

./: .gitlab-ci.yml  README.md  default.nix  deploy-docker-hub.sh  dockerimage.nix  matrix-gitlab.cabal
app/: Main.hs
docs/: matrix-bot-repomapping.dhall  matrix-gitlab-bot.dhall  overview.dia
src/GMB/Gitlab/: API.hs  ConfigOptions.hs  Conversion.hs  ProgramOptions.hs  RepoMapping.hs
src/Web/Matrix/Gitlab/: API.hs  ConfigOptions.hs  Conversion.hs  ProgramOptions.hs  RepoMapping.hs
src/Web/Matrix/Gitlab/Internal/: Commit.hs  Issue.hs  Project.hs
test/: Spec.hs
test/data/: check_complete.json
