name:                matrix-gitlab
version:             0.1.0.0
synopsis:            Process gitlab events and post them to a Matrix channel
description:         Process gitlab events and post them to a Matrix channel
homepage:            https://github.com/githubuser/matrix-gitlab#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Matrix.Gitlab.ProgramOptions
                     , Web.Matrix.Gitlab.ConfigOptions
                     , Web.Matrix.Gitlab.Conversion
                     , Web.Matrix.Gitlab.RepoMapping
                     , Web.Matrix.Gitlab.API
  other-modules:       Web.Matrix.Gitlab.Internal.Commit
                     , Web.Matrix.Gitlab.Internal.Issue
                     , Web.Matrix.Gitlab.Internal.Project
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , lens
                     , lucid
                     , text-format
                     , containers
                     , plpd-utils
                     , filepath
                     , aeson
                     , matrix-bot-api
                     , text
                     , scotty
                     , dhall
                     , text-format
                     , mtl
                     , http-types
  default-language:    Haskell2010

executable matrix-gitlab-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , matrix-bot-api
                     , lens
                     , plpd-utils
                     , http-types
                     , mtl
                     , aeson
                     , text
                     , bytestring
                     , matrix-gitlab
                     , scotty

test-suite matrix-gitlab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base
                     , matrix-gitlab
                     , HUnit
                     , filepath
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
                     , test-framework-quickcheck2
                     , quickcheck-instances
                     , text
                     , plpd-utils
                     , matrix-bot-api
                     , QuickCheck
                     , aeson
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
