name:                matrix-gitlab
version:             0.1
synopsis:            Process gitlab events and post them to a Matrix channel
description:         Process gitlab events and post them to a Matrix channel
homepage:            https://github.com/plapadoo/matrix-gitlab-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          Philipp Middendorf <middendorf@plapadoo.de>
copyright:           plapadoo UG 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Web.Matrix.Gitlab.ProgramOptions
                     , Web.Matrix.Gitlab.ConfigOptions
                     , Web.Matrix.Gitlab.Conversion
                     , Web.Matrix.Gitlab.RepoMapping
                     , Web.Matrix.Gitlab.API
                     , Plpd.Util
                     , Plpd.Dhall
                     , Plpd.Http
                     , Plpd.MonadLog
  other-modules:       Web.Matrix.Gitlab.Internal.Commit
                     , Web.Matrix.Gitlab.Internal.Issue
                     , Web.Matrix.Gitlab.Internal.Project
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , lens
                     , lucid
                     , text-format
                     , cryptonite
                     , bytestring
                     , time
                     , iso8601-time
                     , uuid
                     , wreq
                     , random
                     , containers
                     , filepath
                     , aeson
                     , text
                     , scotty
                     , dhall
                     , text-format
                     , mtl
                     , http-types
  default-language:    Haskell2010

executable matrix-gitlab-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , http-types
                     , mtl
                     , aeson
                     , lucid
                     , text
                     , bytestring
                     , matrix-gitlab
                     , scotty

test-suite matrix-gitlab-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions: OverloadedStrings NoImplicitPrelude
  build-depends:       base
                     , matrix-gitlab
                     , HUnit
                     , filepath
                     , test-framework
                     , lens
                     , test-framework-hunit
                     , test-framework-th
                     , test-framework-quickcheck2
                     , quickcheck-instances
                     , text
                     , QuickCheck
                     , aeson
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
